Getting closer to creating a proper framework for rom hacking